Changes after lint inspection