@@ -684,14 +684,14 @@ public abstract class HttpTest extends SKAbstractBaseTest implements Runnable {
 
 /* The following set of methods relates to a  communication with the external UI TODO move prototypes to test */
 
-  static private AtomicReference<Double> sLatestSpeedForExternalMonitorBytesPerSecond = new AtomicReference<>(new Double(0.0));
-  static private AtomicReference<Double> sBytesPerSecondLast = new AtomicReference<>(new Double(0.0));
+  static private AtomicReference<Double> sLatestSpeedForExternalMonitorBytesPerSecond = new AtomicReference<>(Double.valueOf(0.0));
+  static private AtomicReference<Double> sBytesPerSecondLast = new AtomicReference<>(Double.valueOf(0.0));
 
   private static String sLatestSpeedForExternalMonitorTestId = "";
 
   private static void sLatestSpeedReset(String theReasonId) {
-    sLatestSpeedForExternalMonitorBytesPerSecond.set(new Double(0));
-    sBytesPerSecondLast.set(new Double(0));
+    sLatestSpeedForExternalMonitorBytesPerSecond.set(Double.valueOf(0));
+    sBytesPerSecondLast.set(Double.valueOf(0));
     sLatestSpeedForExternalMonitorTestId = theReasonId;
   }
 
